# lp-tools

./: .env  Cargo.toml  README.md  diesel.toml
lp/: Cargo.toml
lp-import/: Cargo.toml  README.md
lp-import/src/: context.rs  lib.rs  main.rs
lp-import/src/readers/: album.rs  artist.rs  artist_credit.rs  artist_credit_name.rs  contribution.rs  medium.rs  membership.rs  mod.rs  release.rs  song.rs  track.rs  tracklist.rs
lp-magick/: Cargo.toml  README.md
lp-magick/src/: ffi.rs  lib.rs
lp-magick/src/magick_wand/: image.rs  mod.rs
lp-server/: Cargo.toml
lp-server/src/: graphql.rs  main.rs
lp-server/static/: graphiql.html
lp-tag/: Cargo.toml  README.md  build.rs
lp-tag/src/: api.rs  ffi.rs  lib.rs  main.rs  taglib.rs
lp-tag/src/cpp/: taglib.cpp
lp/src/: db.rs  duration.rs  lib.rs  partial_date.rs  schema.rs
lp/src/graphql/: context.rs  mod.rs  schema.rs
lp/src/graphql/schema/: album.rs  album_name.rs  artist.rs  artist_credit.rs  artist_name.rs  artist_url.rs  mod.rs  mutation_root.rs  query_root.rs
lp/src/models/: album.rs  album_name.rs  artist.rs  artist_credit.rs  artist_credit_name.rs  artist_name.rs  artist_url.rs  contribution.rs  medium.rs  membership.rs  mod.rs  release.rs  release_url.rs  song.rs  song_name.rs  song_url.rs  track.rs  track_name.rs
lp/src/repositories/: album_name_repository.rs  album_repository.rs  artist_credit_name_repository.rs  artist_credit_repository.rs  artist_name_repository.rs  artist_repository.rs  artist_url_repository.rs  contribution_repository.rs  medium_repository.rs  membership_repository.rs  mod.rs  release_repository.rs  release_url_repository.rs  song_name_repository.rs  song_repository.rs  song_url_repository.rs  track_name_repository.rs  track_repository.rs
migrations/20161211074622_create_artists/: up.sql
migrations/20161214032238_create_artist_names/: down.sql  up.sql
migrations/20161215065358_create_artist_urls/: down.sql  up.sql
migrations/20161215065923_create_artist_credits/: up.sql
migrations/20161215065931_create_artist_credit_names/: down.sql  up.sql
migrations/20161215073804_create_memberships/: up.sql
migrations/20161221083925_create_albums/: up.sql
migrations/20161221084751_create_album_names/: down.sql  up.sql
migrations/20161222014240_create_releases/: up.sql
migrations/20161222085012_create_release_urls/: down.sql  up.sql
migrations/20161224032737_create_media/: up.sql
migrations/20161224170229_create_songs/: up.sql
migrations/20161224201649_create_song_names/: down.sql  up.sql
migrations/20161224201747_create_song_urls/: down.sql  up.sql
migrations/20161224203709_create_contributions/: up.sql
migrations/20161225184023_create_tracks/: up.sql
migrations/20161225184032_create_track_names/: down.sql  up.sql
