[package]
name = "lp-import"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]

[dependencies]
chrono = "0.4.0"
diesel = "1.1.1"
futures = "0.1.10"
futures-cpupool = "0.1.2"
glob = "0.2.11"
lazy_static = "1.0.0"
lp = { path = "../lp" }
lp-magick = { path = "../lp-magick" }
rand = "0.4.2"
regex = "0.2.0"
toml = "0.4.5"
unidecode = "0.3.0"
