[package]
name = "lp-import"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.0"
diesel = "1.1.1"
futures = { version = "0.3.1", features = ["thread-pool"] }
glob = "0.3.0"
lazy_static = "1.0.0"
lp = { path = "../lp" }
lp-magick = { path = "../lp-magick" }
rand = "0.7.0"
regex = "1.1.0"
toml = "0.5.0"
unidecode = "0.3.0"
