[package]
name = "lp-tag"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
glob = "0.2.11"
lazy_static = "1.0.0"
libc = "0.2.21"
regex = "0.2.0"
reqwest = "0.8.1"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.7"
unidecode = "0.3.0"

[build-dependencies]
cc = "1.0.28"
