[package]
name = "lp"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]

[dependencies]
chrono = "0.3.0"
diesel = { version = "0.12.0", features = ["chrono", "postgres"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.8.0"
juniper = "0.6.2"
lazy_static = "0.2.2"
r2d2 = "0.7.1"
r2d2-diesel = "0.12.0"
