[package]
name = "lp"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]

[dependencies]
chrono = "0.4.0"
diesel = { version = "1.1.1", features = ["chrono", "postgres", "r2d2"] }
diesel_infer_schema = { version = "1.1.0", features = ["postgres"] }
dotenv = "0.11.0"
juniper = "0.9.2"
juniper_codegen = "0.9.2"
lazy_static = "1.0.0"
